Revision history for {{$dist->name}}

{{$NEXT}}
          - drop annoying -TRIAL suffix on git tag names - tags will now
            always be in the consistent form: v1.234

0.089     2015-03-06 04:35:28Z
          - ensure correct version of [Test::CleanNamespaces] is used, to ward
            off test failures due to mismatched filenames

0.088     2015-03-05 04:33:03Z
          - fix use of [Test::CheckBreaks] in dist.ini of minted dists
          - add mailing list and irc metadata for minted Test distribution
          - now passing along any payload for [Git::NextVersion] to the
            replacement used by [RewriteVersion::Transitional]
          - added [Test::CleanNamespaces]

0.087     2015-02-20 02:47:43Z
          - now requiring a more conservative minimum version for
            Module::Build::Tiny, when it is used.
          - fix the 'default' minting profile
          - lower the default maximum-allowed minimum perl version in built
            distributions from 5.008001 to 5.006.

0.086     2015-02-01 01:38:17Z
          - no longer scans inc/ for configure_requires minimum perl version
          - generated CONTRIBUTING file now mentions the existence of a TODO
            file in the repository (which is never packaged)
          - dropped the use of "use warnings FATAL => 'all';' in this
            distribution's tests, and in newly-minted distributions
          - add 'default' minting profile, which is the same as 'github'
          - switched from using [Git::NextVersion] and [PkgVersion] as the
            version provider and version inserter (respectively) to
            [RewriteVersion::Transitional] and
            [BumpVersionAfterRelease::Transitional]

0.085     2015-01-16 01:45:19Z
          - fix test failure with metadata mismatch created by [Run::*] 0.031

0.084     2015-01-09 21:46:59Z
          - fix tests that failed in 0.083 for anyone who did not have a
            ~/.pause file

0.083     2015-01-08 04:24:23Z