@@ -43,7 +43,7 @@ Dist::Zilla::Plugin::PruneCruft = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::Git::Describe = 0
 Dist::Zilla::Plugin::PodWeaver = 4.005
-Dist::Zilla::Plugin::NextRelease = 4.300018
+Dist::Zilla::Plugin::NextRelease = 5.033
 Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::AuthorityFromModule = 0.002
 Dist::Zilla::Plugin::Authority = != 1.008
